[package]
name = "nft_badge_system"
version = "0.1.0"
description = "NFT Badge System on Solana using Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_badge_system"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["metadata"] }
solana-program = "=1.18.22"
